fixed footer contact form alignment on all devices

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -203,6 +203,10 @@ body, html {
   height: 520px;
 }
 
+.footer-form {
+  z-index: 1;
+}
+
 .footer-image {
   z-index: 0;
 }
